# Projet-debugger

./: CMakeLists.txt  README.md  TODO.md
include/: .gitignore  fonctions.h  load_elf.h  tools.h
src/: fonction.c  fonctions.c  input.c  interposition.c  load_elf.c  main.c  mk_libinter_h.c  print_elf.c  print_proc.c  print_symtab.c  print_tools.c
src/interposition/: interposition.c  mk_libinter_h.c
tests/: +-.c  segfault.c
